--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-typescript",
   "version": "1.0.0",
   "description": "React and TypeScript example starter project",
+  "homepage": "https://nicolekc.github.io/caesar-shift",
   "keywords": [
     "typescript",
     "react",
@@ -17,16 +18,21 @@
   "devDependencies": {
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
+    "autoprefixer": "^10.4.20",
     "gh-pages": "^6.2.0",
+    "postcss": "^8.4.49",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "4.4.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run build:css && react-scripts start",
+    "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "build:css": "postcss src/styles.css -o public/build.css"
   },
   "browserslist": [
     ">0.2%",
